# scraping-dbg

./: Cargo.toml  test_curl.sh
src/: engine.rs  lib.rs  parsing.rs  selector.rs  utils.rs
src/scrapers/: item.rs  mod.rs  pipelines.rs  retry.rs  selector.rs
src/test_data/: DIP21.html
